added to git ingnore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+SFML_Astro.vcxproj.filters
+SFML_Astro.vcxproj
+SFML_Astro.sln
+CMakeLists.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -363,3 +367,4 @@ MigrationBackup/
 FodyWeavers.xsd
 
 /build
+/cmake-build-debug/
